# Stock_management

./: BonCommande.cpp  BonCommande.h  CMakeLists.txt  Client.cpp  Client.h  Commande.cpp  Commande.h  Composant.cpp  Composant.h  Composant1.cpp  Composant1.h  Composant2.cpp  Composant2.h  Composant3.cpp  Composant3.h  Composant4.cpp  Composant4.h  Composant5.h  Compteur.cpp  Compteur.h  Entrepot.cpp  Entrepot.h  Entreprise.cpp  Entreprise.h  Fournisseur.cpp  Fournisseur.h  Inventaire.h  Produit.cpp  Produit.h  ProduitA.cpp  ProduitA.h  ProduitB.h  ProduitC.h  ProduitD.h  ProduitE.h  README.md  RapportAssuranceQualite.h  Reception.cpp  Reception.h  Structure de fin  (+6 more)
app/: main.cpp
src/: Client.cpp  Commande.cpp  Composant5.cpp  Inventaire.cpp  ProduitB.cpp  ProduitC.cpp  ProduitD.cpp  ProduitE.cpp  RapportAssuranceQualite.cpp  hasard.cpp
tests/: testClient  testCommande  testCommerce  testComposants  testFournisseur  testP_et_C
