cmake_minimum_required(VERSION 3.29)
project(Devoir2)

set(CMAKE_CXX_STANDARD 20)

add_executable(Devoir2 main.cpp
        Compteur.cpp
        Compteur.h
        Composant.cpp
        Composant.h
        Composant1.cpp
        Composant1.h
        Composant2.cpp
        Composant2.h
        Composant3.cpp
        Composant3.h
        Composant4.cpp
        Composant4.h
        Composant5.cpp
        Composant5.h
        Produit.cpp
        Produit.h
        ProduitA.cpp
        ProduitA.h
        ProduitB.cpp
        ProduitB.h
        ProduitC.cpp
        ProduitC.h
        ProduitD.cpp
        ProduitD.h
        ProduitE.cpp
        ProduitE.h
        Commande.cpp
        Commande.h
        Inventaire.cpp
        Inventaire.h
        Fournisseur.cpp
        Fournisseur.h
        hasard.cpp
        hasard.h
        Entrepot.cpp
        Entrepot.h
        BonCommande.cpp
        BonCommande.h
        Reception.cpp
        Reception.h
        Client.cpp
        Client.h
        Entreprise.cpp
        Entreprise.h
        RapportAssuranceQualite.cpp
        RapportAssuranceQualite.h
)
